chore: bring back last updated time on project page

--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -29,7 +29,7 @@ const { slug, title, description, heroImage } = Astro.props
         <span>15 min read</span>
       </div>
       <p
-        class='font-display mt-3 line-clamp-2 text-lg font-semibold md:text-xl'
+        class='font-display mt-3 line-clamp-2 text-lg font-semibold leading-[1.4] md:text-xl'
       >
         {title}
       </p>
