--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -26,6 +26,6 @@ const blogEntries = await getCollection('blog')
     class='mt-12 gap-12 sm:mt-16'
     transition:animate={getCustomTransition(0.2)}
   >
-    {blogEntries.map(({ id, data }) => <BlogCard slug={id} {...data} />)}
+    {blogEntries.map((item) => <BlogCard {...item} />)}
   </section>
 </BaseLayout>
