--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -22,10 +22,7 @@ const blogEntries = await getCollection('blog')
   />
   <Decorator slot='decorator' />
   <BlogHeader class='mt-16 sm:mt-40' />
-  <section
-    class='mt-12 gap-12 sm:mt-16'
-    transition:animate={getCustomTransition(0.2)}
-  >
+  <section class='mt-12 sm:mt-16' transition:animate={getCustomTransition(0.2)}>
     {blogEntries.map((item) => <BlogCard {...item} />)}
   </section>
 </BaseLayout>
