feat: add new blog post

--- a/src/layouts/BlogLayout/BlogLayout.astro
+++ b/src/layouts/BlogLayout/BlogLayout.astro
@@ -46,7 +46,7 @@ const {
     slot='seo'
   />
   <slot name='head' slot='head' />
-  <TopOverlay />
+  <!-- <TopOverlay /> -->
   <ScrollProgressBar
     className='bg-[var(--projectAccentColor)]'
     targetId='article'
