--- a/src/components/Image/MarkdownImage.astro
+++ b/src/components/Image/MarkdownImage.astro
@@ -3,6 +3,8 @@ import Image from './Image.astro'
 import type { CustomImageProps } from './types'
 
 type Props = CustomImageProps
+
+const { props } = Astro
 ---
 
-<Image {...Astro.props} inferSize />
+<Image {...props} title={props.alt} inferSize />
