--- a/src/pages/_components/BentoSection.astro
+++ b/src/pages/_components/BentoSection.astro
@@ -18,7 +18,7 @@ import BentoItemTypingSpeed from './bento/BentoItemTypingSpeed'
 
 const socialMedias = [
   { icon: X, href: 'https://twitter.com/jestseee' },
-  { icon: Figma, href: 'https://figma.com' },
+  { icon: Figma, href: 'https://www.figma.com/@jestsee' },
   { icon: Codepen, href: 'https://codepen.io/jestsee' }
 ]
 ---
