chore: update blog section button

--- a/src/pages/_components/BlogSection.astro
+++ b/src/pages/_components/BlogSection.astro
@@ -12,7 +12,7 @@ const blog = await getCollection('blog')
 <section id='blog' class='mt-40 scroll-mt-16'>
   <div class='items-center justify-between gap-4 lg:flex'>
     <BlogHeader forHomePage />
-    <FancyLink class='max-lg:hidden' href='/blog'>View all blog</FancyLink>
+    <FancyLink class='max-lg:hidden' href='/blog'>View all articles</FancyLink>
   </div>
   <div class='mt-12' transition:animate={getCustomTransition(0.2)}>
     {blog.map((item) => <BlogCard {...item} />)}
