--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -1,5 +1,6 @@
 ---
 import type { CollectionEntry } from 'astro:content'
+import calculateReadingTime from 'reading-time'
 
 import BlogInfo from './BlogInfo.astro'
 import { ArrowRight } from './icons/ArrowRight'
@@ -13,6 +14,8 @@ const {
   data: { heroImage, title, pubDate, description, tags },
   body
 } = Astro.props
+
+const { minutes } = calculateReadingTime(body!)
 ---
 
 <Link
@@ -29,7 +32,7 @@ const {
   />
   <div class='flex w-full flex-col justify-between lg:py-2'>
     <div class='font-light'>
-      <BlogInfo pubDate={pubDate} body={body} />
+      <BlogInfo pubDate={pubDate} readingTime={minutes} />
       <p
         class='font-display mt-3 line-clamp-2 text-lg font-semibold leading-[1.4]'
       >
