--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -1,4 +1,5 @@
 ---
+import type { GetStaticPaths } from 'astro'
 import { getCollection, render } from 'astro:content'
 import readingTime from 'reading-time'
 
@@ -6,38 +7,35 @@ import ContentWrapper from '@/components/ContentWrapper.astro'
 import BlogLayout from '@/layouts/BlogLayout'
 import client from '@/lib/client'
 
-export async function getStaticPaths() {
+export const getStaticPaths = (async () => {
   const blogEntries = await getCollection('blog')
 
-  return Promise.all(
-    blogEntries.map(async ({ data, ...rest }) => {
-      const getLastUpdatedTime = client.api.github['last-updated-file']
-      const { latestCommitUrl, lastUpdatedTime } = await getLastUpdatedTime
-        .$get({ query: { path: `blog/${rest.id}.mdx` } })
-        .then((res) => res.json())
-
-      const entry = {
-        ...rest,
-        data: {
-          ...data,
-          ...(rest.body && { readingTime: readingTime(rest.body).minutes }),
-          updatedDate: new Date(lastUpdatedTime),
-          latestCommitUrl
-        }
-      }
-
-      return {
-        params: { id: entry.id },
-        props: { entry }
-      }
-    })
-  )
-}
+  return blogEntries.map((entry) => {
+    return {
+      params: { id: entry.id },
+      props: { entry }
+    }
+  })
+}) satisfies GetStaticPaths
 
 const { entry } = Astro.props
 const { Content, headings } = await render(entry)
+
+const getLastUpdatedTime = client.api.github['last-updated-file']
+const { latestCommitUrl, lastUpdatedTime } = await getLastUpdatedTime
+  .$get({ query: { path: `blog/${entry.id}.mdx` } })
+  .then((res) => res.json())
+
+const { minutes } = readingTime(entry.body!)
 ---
 
-<BlogLayout headings={headings} {...entry}>
+<BlogLayout
+  headings={headings}
+  id={entry.id}
+  updatedDate={new Date(lastUpdatedTime)}
+  latestCommitUrl={latestCommitUrl}
+  readingTime={Math.ceil(minutes)}
+  {...entry.data}
+>
   <ContentWrapper content={Content} />
 </BlogLayout>
