--- a/src/pages/projects/[id].astro
+++ b/src/pages/projects/[id].astro
@@ -1,4 +1,5 @@
 ---
+import type { GetStaticPaths, InferGetStaticPropsType } from 'astro'
 import { getCollection, render } from 'astro:content'
 import readingTime from 'reading-time'
 import type { BreadcrumbList, WithContext } from 'schema-dts'
@@ -8,35 +9,25 @@ import ProjectLayout from '@/layouts/ProjectLayout'
 import client from '@/lib/client'
 import { getProjectSchema, projectWebsite } from '@/lib/structuredData'
 
-export async function getStaticPaths() {
+interface Props extends InferGetStaticPropsType<typeof getStaticPaths> {}
+
+export const getStaticPaths = (async () => {
   const projectEntries = await getCollection('projects')
 
-  return Promise.all(
-    projectEntries.map(async ({ data, ...rest }) => {
-      const getLastUpdatedTime = client.api.github['last-updated-file']
-      const { latestCommitUrl, lastUpdatedTime } = await getLastUpdatedTime
-        .$get({ query: { path: `projects/${rest.id}.mdx` } })
-        .then((res) => res.json())
-
-      const entry = {
-        ...rest,
-        data: {
-          ...data,
-          updatedDate: new Date(lastUpdatedTime),
-          latestCommitUrl
-        }
-      }
-
-      return {
-        params: { id: entry.id },
-        props: { entry }
-      }
-    })
-  )
-}
+  return projectEntries.map((entry) => ({
+    params: { id: entry.id },
+    props: { entry }
+  }))
+}) satisfies GetStaticPaths
 
 const { entry } = Astro.props
 const { Content, headings } = await render(entry)
+
+const getLastUpdatedTime = client.api.github['last-updated-file']
+const { latestCommitUrl, lastUpdatedTime } = await getLastUpdatedTime
+  .$get({ query: { path: `projects/${entry.id}.mdx` } })
+  .then((res) => res.json())
+
 const { minutes, words } = readingTime(entry.body!)
 
 const projectStructuredData = getProjectSchema(entry)
@@ -71,6 +62,8 @@ const jsonLd = {
   slug={entry.id}
   readingTime={Math.ceil(minutes)}
   wordsCount={words}
+  updatedDate={new Date(lastUpdatedTime)}
+  latestCommitUrl={latestCommitUrl}
   {...entry.data}
 >
   <script
