--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -35,12 +35,12 @@ const FOOTER_CONTENTS: FooterContent[] = [
   {
     title: 'This site',
     links: [
-      { text: 'Attribution', href: '#' },
       {
         text: 'Analytics',
         href: 'https://us.umami.is/share/Fmo9fhCyJtinAbWP/jestsee.com',
         inNewTab: true
       },
+      { text: 'RSS', href: '/rss.xml', inNewTab: true },
       {
         text: 'Source code',
         href: 'https://github.com/jestsee/jestsee.com',
