--- a/src/components/FancyLink.astro
+++ b/src/components/FancyLink.astro
@@ -9,6 +9,7 @@ const { class: className, ...rest } = Astro.props
 <Link class={className} {...rest}>
   <div class:list={'animated-button'}>
     <svg
+      aria-hidden='true'
       viewBox='0 0 24 24'
       class='arr-2 size-4'
       xmlns='http://www.w3.org/2000/svg'
@@ -20,6 +21,7 @@ const { class: className, ...rest } = Astro.props
     <span class='text'><slot /></span>
     <span class='circle'></span>
     <svg
+      aria-hidden='true'
       viewBox='0 0 24 24'
       class='arr-1 size-4'
       xmlns='http://www.w3.org/2000/svg'
