--- a/src/pages/_components/BentoSection.astro
+++ b/src/pages/_components/BentoSection.astro
@@ -78,7 +78,7 @@ const socialMedias = [
             href={href}
             aria-label='Social media'
             target='_blank'
-            class='flex size-full items-center justify-center group-hover:text-emerald-400'
+            class='flex size-full items-center justify-center rounded-3xl group-hover:text-emerald-400'
           >
             <Icon className='size-10' />
           </a>
