--- a/src/pages/_components/bento/BentoItemCTA/BentoItemCTA.astro
+++ b/src/pages/_components/bento/BentoItemCTA/BentoItemCTA.astro
@@ -6,7 +6,9 @@ import Link from '@/components/Link'
 
 <Link
   href='#projects'
-  class:list={['flex size-full items-center justify-between px-6 py-6']}
+  class:list={[
+    'flex size-full items-center justify-between rounded-3xl px-6 py-6'
+  ]}
 >
   <p
     class:list={[
