--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -110,9 +110,14 @@ const FOOTER_CONTENTS: FooterContent[] = [
           <ul class='flex gap-3 text-zinc-200'>
             {
               socialMediaData.map(({ icon: Icon, href, name }) => (
-                <li class='focus-within:rounded focus-within:outline focus-within:outline-offset-4 focus-within:outline-emerald-300'>
-                  <Link href={href} target='_blank' aria-label={name}>
-                    <Icon className='size-5' />
+                <li>
+                  <Link
+                    href={href}
+                    target='_blank'
+                    aria-label={name}
+                    class='group'
+                  >
+                    <Icon className='size-5 rounded group-focus-within:outline outline-offset-4 outline-emerald-300' />
                   </Link>
                 </li>
               ))
