feat: add view transition fallback for unsupported browser

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -65,4 +65,4 @@ import { AstroFont } from 'astro-font'
   data-website-id='171092c9-481f-43cd-865f-97d8b52b886f'
   data-domains='jestsee.com,www.jestsee.com'></script>
 
-<ClientRouter />
+<ClientRouter fallback='swap' />
