--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -124,7 +124,7 @@ const FOOTER_CONTENTS: FooterContent[] = [
             }
           </ul>
           <p class='text-xs text-zinc-500'>
-           © &copy; {new Date().getFullYear()} Jesica. All rights reserved.
+            &copy; {new Date().getFullYear()} Jesica. All rights reserved.
           </p>
         </div>
       </div>
