chore: update video component & remove unused file

--- a/src/components/Footer/LastUpdatedTime.astro
+++ b/src/components/Footer/LastUpdatedTime.astro
@@ -11,7 +11,7 @@ const response = await client.api.github['repo-info'][':owner'][
 ].$get({
   param: {
     owner: 'jestsee',
-    repository: 'portfolio-revamp'
+    repository: 'jestsee.com'
   }
 })
 const data = response.status === 200 ? await response.json() : null
