Your commit message here

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -62,7 +62,7 @@ import { AstroFont } from 'astro-font'
   defer
   type='text/partytown'
   src='https://cloud.umami.is/script.js'
-  data-website-id='171092c9-481f-43cd-865f-97d8b52b886f'
-  data-domains='jestsee.com,www.jestsee.com'></script>
+  data-website-id='67c6e46c-91d1-4642-9d91-c51e6f1366ea'
+  data-domains='beetroot7.netlify.app,www.beetroot7.netlify.app'></script>
 
 <ClientRouter fallback='swap' />
