--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -20,7 +20,7 @@ type FooterContent = {
 
 const socialMediaData = [
   ...SOCIAL_MEDIA_DATA,
-  { icon: X, href: 'https://twitter.com/jestseee', name: 'twitter' }
+  { icon: X, href: 'https://twitter.com/lynntheophene', name: 'twitter' }
 ]
 
 const FOOTER_CONTENTS: FooterContent[] = [
@@ -35,15 +35,15 @@ const FOOTER_CONTENTS: FooterContent[] = [
   {
     title: 'This site',
     links: [
-      {
-        text: 'Analytics',
-        href: 'https://us.umami.is/share/Fmo9fhCyJtinAbWP/jestsee.com',
-        inNewTab: true
-      },
+      // { 
+      //   text: 'Analytics',
+      //   href: 'https://us.umami.is/share/Fmo9fhCyJtinAbWP/jestsee.com', // need to modify this after fixing 
+      //   inNewTab: true
+      // },
       { text: 'RSS', href: '/rss.xml', inNewTab: true },
       {
         text: 'Source code',
-        href: 'https://github.com/jestsee/jestsee.com',
+        href: 'https://github.com/lynntheophene/lynntheophene.com',
         inNewTab: true
       }
     ]
@@ -51,15 +51,15 @@ const FOOTER_CONTENTS: FooterContent[] = [
   {
     title: 'Elsewhere',
     links: [
-      {
-        text: 'Bluesky',
-        href: 'https://bsky.app/profile/jestsee.com',
-        inNewTab: true,
-        withIcon: true
-      },
+    //  {
+    //   text: 'Bluesky',
+    //    href: 'https://bsky.app/profile/lynntheophene.com',
+    //    inNewTab: true,
+    //    withIcon: true
+    //  },
       {
         text: 'Monkeytype',
-        href: 'https://monkeytype.com/profile/jestsee_',
+        href: 'https://monkeytype.com/profile/lynntheophene',
         inNewTab: true,
         withIcon: true
       }
@@ -98,8 +98,8 @@ const FOOTER_CONTENTS: FooterContent[] = [
       <div class='space-y-24'>
         <div class='space-y-3'>
           <p class='text-lg leading-none text-zinc-200'>
-            <span class='tracking-widest'> 王安琪 </span>
-            <span class='mx-[2px]'>•</span> Jesica
+            <span class='tracking-widest'> തിയോഫീൻ ലിൻ </span>
+            <span class='mx-[2px]'>•</span> Theophene Lynn
           </p>
           <p
             class='text-[13px] text-zinc-500'
@@ -124,7 +124,7 @@ const FOOTER_CONTENTS: FooterContent[] = [
             }
           </ul>
           <p class='text-xs text-zinc-500'>
-            &copy; {new Date().getFullYear()} Jesica. All rights reserved.
+            &copy; {new Date().getFullYear()} Theophene. All rights reserved.
           </p>
         </div>
       </div>
