--- a/src/pages/_components/BentoSection.astro
+++ b/src/pages/_components/BentoSection.astro
@@ -17,9 +17,9 @@ import BentoItemTechStack from './bento/BentoItemTechStack'
 import BentoItemTypingSpeed from './bento/BentoItemTypingSpeed'
 
 const socialMedias = [
-  { icon: X, href: 'https://twitter.com/jestseee' },
-  { icon: Figma, href: 'https://www.figma.com/@jestsee' },
-  { icon: Codepen, href: 'https://codepen.io/jestsee' }
+  { icon: X, href: 'https://twitter.com/lynntheophene' },
+  { icon: Figma, href: 'https://www.figma.com/@lynntheophene' },
+  { icon: Codepen, href: 'https://codepen.io/lynntheophene' }
 ]
 ---
 
