--- a/src/pages/_components/HeroSection.astro
+++ b/src/pages/_components/HeroSection.astro
@@ -26,13 +26,12 @@ import Keyboard from '../_components/Keyboard.astro'
   <h1
     class='enter-animation text-[clamp(2rem,7vw,3rem)] font-medium leading-[1.05] tracking-tight'
   >
-    Hi, I’m Jesica. <br /> A software engineer.
+    Hi, I’m Theophene Lynn. <br /> A software engineer.
   </h1>
   <h2
     class='enter-animation mb-8 max-w-xl leading-relaxed text-slate-400 max-sm:text-sm'
   >
-    Mainly working in the JavaScript ecosystem, I’m a dedicated problem-solver
-    who thrives on learning and building.
+    I blend design and engineering to build meaningful tech. A software developer with a builder's mindset, based in India.
   </h2>
   <Keyboard class='enter-animation' />
 </section>
