--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -22,9 +22,12 @@ const { entry } = Astro.props
 const { Content, headings } = await render(entry)
 
 const getLastUpdatedTime = client.api.github['last-updated-file']
-const { latestCommitUrl, lastUpdatedTime } = await getLastUpdatedTime
+const lastUpdated = await getLastUpdatedTime
   .$get({ query: { path: `blog/${entry.id}.mdx` } })
-  .then((res) => res.json())
+  .then((res) => res.json());
+
+const latestCommitUrl = lastUpdated?.latestCommitUrl ?? '';
+const lastUpdatedTime = lastUpdated?.lastUpdatedTime ?? '';
 
 const { minutes } = readingTime(entry.body!)
 ---
