--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -10,7 +10,7 @@ import { AstroFont } from 'astro-font'
 <!-- Global Metadata -->
 <meta charset='utf-8' />
 <meta name='viewport' content='width=device-width,initial-scale=1' />
-<link rel='icon' type='image/svg+xml' href='/favicon.svg' />
+<link rel='icon' type='image/svg+xml' href='/TL.svg' />
 <meta name='generator' content={Astro.generator} />
 <link rel='sitemap' href='/sitemap-index.xml' />
 
