--- a/src/pages/_components/bento/BentoItemFeaturedWork/BentoItemFeaturedWork.astro
+++ b/src/pages/_components/bento/BentoItemFeaturedWork/BentoItemFeaturedWork.astro
@@ -9,7 +9,7 @@ import BentoBadge from '../BentoBadge'
 ---
 
 <Link
-  href='/projects/bookmarked'
+  href='/projects/bookmarked-android'
   class:list={[
     'relative flex h-full flex-col gap-3 overflow-hidden rounded-[inherit] px-5 pb-8 pt-4',
     'max-xs:pb-36 md:max-lg:gap-4'
@@ -22,10 +22,10 @@ import BentoBadge from '../BentoBadge'
       className={{ component: 'w-fit' }}
     />
     <div class='space-y-3 xs:max-md:w-1/2'>
-      <p class='text-xl leading-none'>Bookmarked</p>
+      <p class='text-xl leading-none'>Beetroot</p>
       <p class='text-sm leading-relaxed text-slate-400'>
-        Effortlessly save and organize your favorite tweets in Notion using a
-        Telegram bot.
+        Fresh Vibes Only! ,
+        Beetroot makes it easy to reduce food waste and make the most of every meal.
       </p>
     </div>
   </div>
@@ -52,7 +52,7 @@ import BentoBadge from '../BentoBadge'
       <NotificationCard
         sender='Bookmarked'
         time='Just now'
-        message='Your bookmark has been saved'
+        message='Beetroot helps you cut waste, track calories, and eat smarter -- all in one tasty app.'
         class:list={[
           'z-20 text-slate-700 max-xs:w-[300px]',
           'transition-all duration-300',
@@ -65,7 +65,7 @@ import BentoBadge from '../BentoBadge'
       <NotificationCard
         sender='Bookmarked'
         time='1m ago'
-        message='Bookmarking this thread'
+        message='Beetroot , your new kitchen sidekick'
         class:list={[
           'z-10 -mt-8 w-[88%] bg-slate-400 text-slate-800',
           'transition-all duration-500',
