--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -23,7 +23,7 @@ const { minutes } = calculateReadingTime(body!)
   class='group flex gap-8 border-t border-t-zinc-900 py-10 max-md:flex-col'
 >
   <Image
-    src={heroImage}
+    src={heroImage.src}
     alt={title}
     align='center'
     class='aspect-[2] transition-all duration-800 group-hover:scale-105 md:aspect-[1.5]'
